deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentreder
  labels:
    name: opentreder
    environment: production
